[tool.poetry]
name = "qa-guru-7-18"
version = "0.1.0"
description = "qa.guru homework"
authors = ["Evgenii Li <evgeniili2203@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc4"
pytest = "^7.4.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
